<resources>
    <string name="app_name">ClubFocus</string>

    <!-- Texto pantalla de intro" -->
    <string name="label_intro">INTRO</string>

    <!-- Textos para la pantalla Login -->
    <string name="label_usuario">USUARIO</string>
    <string name="hint_email">admin@clubfocus.com</string>
    <string name="label_contrasena">CONTRASEÑA</string>
    <string name="image_description">Logo club deportivo Focus</string>
    <string name="hint_contrasena">••••••••</string>
    <string name="btn_ingresar">INGRESAR</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="copyright">© 2026 Club Deportivo Focus</string>

    <!-- Textos para la pantalla Home -->
    <string name="home_welcome">Hola, de nuevo</string>
    <string name="home_user_role">USUARIO • ADMINISTRADOR</string>
    <string name="btn_registrar_socio">REGISTRAR SOCIO / NO SOCIO</string>
    <string name="btn_cobro_cuotas">COBRO DE CUOTAS</string>
    <string name="btn_vencimientos">VENCIMIENTOS</string>
    <string name="btn_carnets">CARNETS</string>
    <string name="btn_historial_pagos">HISTORIAL DE PAGOS</string>
    <string name="btn_cerrar_sesion">Cerrar sesión</string>
    <string name="btn_volver">← Volver</string>

    <!-- Textos para la pantalla de registro de socio -->

    <!-- Cabecera -->
    <string name="registrar_titulo">Registrar</string>
    <string name="registrar_subtitulo">Completa los datos para registrar el ingreso al club</string>

    <!-- Opciones (RadioButtons y CheckBox) -->
    <string name="registrar_opcion_socio">Socio</string>
    <string name="registrar_opcion_no_socio">No Socio</string>
    <string name="registrar_cb_apto_fisico">Presentó Apto Físico</string>

    <!-- Etiquetas de los campos (Labels) -->
    <string name="registrar_label_nombre">* NOMBRE</string>
    <string name="registrar_label_apellido">* APELLIDO</string>
    <string name="registrar_label_dni">* DOCUMENTO NACIONAL DE IDENTIDAD (DNI)</string>
    <string name="registrar_label_fecha_nacimiento">* FECHA DE NACIMIENTO</string>
    <string name="registrar_label_correo">* CORREO ELECTRONICO</string>

    <!-- Textos de ejemplo dentro de los campos (Hints) -->
    <string name="registrar_hint_nombre">Juan</string>
    <string name="registrar_hint_apellido">Perez</string>
    <string name="registrar_hint_dni">12345678</string>
    <string name="registrar_hint_fecha_nacimiento">07/11/2003</string>
    <string name="registrar_hint_correo">correo@ejemplo.com</string>

    <!-- Botón final -->
    <string name="registrar_btn_guardar">GUARDAR REGISTRO</string>

    <!-- Textos de la pantalla Cobro de Cuota -->
    <string name="label_cobro_cuota">Cobro de Cuota</string>
    <string name="hint_buscar_dni">Ingrese el DNI</string>

    <string name="label_medio_pago">SELECCIONA UN MEDIO DE PAGO</string>
    <string name="pago_efectivo">Efectivo</string>
    <string name="pago_tarjeta_credito">Tarjeta Crédito</string>
    <string name="pago_tarjeta_debito">Tarjeta Débito</string>

    <string name="label_promociones">PROMOCIONES</string>
    <string name="promo_3_cuotas">3 Cuotas 15% OFF</string>
    <string name="promo_6_cuotas">6 Cuotas 10% OFF</string>

    <string name="label_detalle_pago">DETALLES DE PAGO</string>
    <string name="label_concepto">Concepto: </string>
    <string name="label_concepto_cuota">Cuota </string>
    <string name="label_monto">Monto</string>
    <string name="label_descuento">Descuento</string>
    <string name="label_monto_total">Monto Total</string>
    <string name="monto_inicial_cero">$ 0</string>
    <string name="monto_inicial_final">$ 0</string>
    <string name="descuento_inicial_cero">- $ 0</string>

    <string name="btn_confirmar_pago">confirmar pago</string>

</resources>