<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="60dp">

        <TextView
            android:id="@+id/txtVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_volver"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cobro_cuota"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etBuscador"
            style="@style/InputSearch"
            android:hint="@string/hint_buscar_dni"
            android:inputType="number"
            android:imeOptions="actionSearch"
            android:autofillHints=""
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_medio_pago"
            android:textColor="@color/disabled"
            android:textSize="12sp"
            android:layout_marginBottom="12dp"

            />

        <RadioGroup
            android:id="@+id/rgMedioPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <!-- Opcion Efectivo -->
            <RadioButton
                android:id="@+id/rbPagoEfectivo"
                style="@style/RbOpcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_cash"
                android:drawablePadding="12dp"
                android:layoutDirection="rtl"
                android:text="@string/pago_efectivo"
                android:enabled="false"/>

            <!-- Opcion Tarjeta Crédito -->
            <RadioButton
                android:id="@+id/rbPagoTarjetaCred"
                style="@style/RbOpcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pago_tarjeta_credito"
                android:drawableEnd="@drawable/ic_credit_card"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:layoutDirection="rtl"
                android:enabled="false"/>

            <!-- Opcion Tarjeta Débito -->
            <RadioButton
                android:id="@+id/rbPagoTarjetaDeb"
                style="@style/RbOpcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pago_tarjeta_debito"
                android:drawableEnd="@drawable/ic_credit_card"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:layoutDirection="rtl"
                android:enabled="false"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_promociones"
            android:textColor="@color/disabled"
            android:textSize="12sp"
            android:layout_marginBottom="12dp"
            />

        <RadioGroup
            android:id="@+id/rgPromo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/rbPromo3c"
                style="@style/RbOpcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/promo_3_cuotas"
                android:gravity="center"
                android:paddingEnd="48dp"
                android:enabled="false"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rbPromo6c"
                style="@style/RbOpcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/promo_6_cuotas"
                android:gravity="center"
                android:paddingEnd="48dp"
                android:enabled="false"/>

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@color/disabled" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ContainerDetallePago"
            android:layout_marginBottom="32dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_detalle_pago"
                android:textColor="@color/disabled"
                android:textSize="12sp"
                android:layout_marginBottom="12dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_concepto" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_concepto_cuota"
                    android:id="@+id/textConceptoPago"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_monto" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monto_inicial_cero"
                    android:id="@+id/textMonto"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_descuento" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descuento_inicial_cero"
                    android:id="@+id/textDescuento"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="@color/disabled" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_monto_total"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textMontoTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monto_inicial_final"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnRegistrarPago"
            style="@style/ButtonPrimaryL"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/btn_confirmar_pago"
            android:textAllCaps="true"/>

    </LinearLayout>

</ScrollView>